--- a/Source/QuanLyBanHang/EntityModel/EntityModel.csproj
+++ b/Source/QuanLyBanHang/EntityModel/EntityModel.csproj
@@ -38,6 +38,9 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -51,8 +54,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="aModel.cs" />
+    <Compile Include="DataModel\eKhachHang.cs" />
+    <Compile Include="DataModel\eTinhThanh.cs" />
     <Compile Include="DataModel\xAccount.cs" />
     <Compile Include="DataModel\xAgency.cs" />
+    <Compile Include="DataModel\xLog.cs" />
     <Compile Include="DataModel\xPersonnel.cs" />
     <Compile Include="DataModel\xAppConfig.cs" />
     <Compile Include="DataModel\xDisplay.cs" />
@@ -63,6 +69,9 @@
     <Compile Include="DataModel\xUserFeature.cs" />
     <Compile Include="DataModel\xUserLog.cs" />
     <Compile Include="DataModel\zModel.cs" />
+    <Compile Include="Method\Converter.cs" />
+    <Compile Include="Method\ObjectCopier.cs" />
+    <Compile Include="Method\ReflectionPopulator.cs" />
     <Compile Include="Module.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
