--- a/Source/QuanLyBanHang/QuanLyBanHang/QuanLyBanHang.csproj
+++ b/Source/QuanLyBanHang/QuanLyBanHang/QuanLyBanHang.csproj
@@ -30,12 +30,20 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>market-store-icon.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="DevExpress.BonusSkins.v16.2, Version=16.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.CodeParser.v16.2, Version=16.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.Data.v16.2, Version=16.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.DataAccess.v16.2, Version=16.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.Office.v16.2.Core, Version=16.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.Printing.v16.2.Core, Version=16.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.RichEdit.v16.2.Core, Version=16.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.Sparkline.v16.2.Core, Version=16.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.Utils.v16.2, Version=16.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.Xpo.v16.2, Version=16.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.XtraBars.v16.2, Version=16.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraEditors.v16.2, Version=16.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraGrid.v16.2, Version=16.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
@@ -48,10 +56,17 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.Entity" />
     <Reference Include="System.Data.Linq" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -64,18 +79,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BLL\Common\clsAgency.cs" />
-    <Compile Include="BLL\Common\clsFuction.cs" />
-    <Compile Include="BLL\Common\clsUserLogs.cs" />
+    <Compile Include="BLL\Common\clsFunction.cs" />
+    <Compile Include="BLL\DanhMuc\clsKhachHang.cs" />
+    <Compile Include="BLL\DanhMuc\clsTinhThanh.cs" />
     <Compile Include="BLL\PERS\clsAccount.cs" />
+    <Compile Include="BLL\PERS\clsFeature.cs" />
     <Compile Include="BLL\PERS\clsPermission.cs" />
     <Compile Include="BLL\PERS\clsPersonnel.cs" />
     <Compile Include="BLL\PERS\clsUserRole.cs" />
-    <Compile Include="GUI\Common\frmAgency.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="GUI\Common\frmAgency.Designer.cs">
-      <DependentUpon>frmAgency.cs</DependentUpon>
-    </Compile>
+    <Compile Include="Data\InitData.cs" />
     <Compile Include="GUI\Common\frmBase.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -99,6 +111,12 @@
     </Compile>
     <Compile Include="GUI\Common\frmConfirm.Designer.cs">
       <DependentUpon>frmConfirm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\Common\frmDatabase.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\Common\frmDatabase.Designer.cs">
+      <DependentUpon>frmDatabase.cs</DependentUpon>
     </Compile>
     <Compile Include="GUI\Common\frmError.cs">
       <SubType>Form</SubType>
@@ -142,6 +160,18 @@
     <Compile Include="GUI\Common\frmWaiting.designer.cs">
       <DependentUpon>frmWaiting.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\DanhMuc\frmKhachHang_List.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\DanhMuc\frmKhachHang_List.Designer.cs">
+      <DependentUpon>frmKhachHang_List.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\DanhMuc\frmTinhThanh_List.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\DanhMuc\frmTinhThanh_List.Designer.cs">
+      <DependentUpon>frmTinhThanh_List.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\PERS\frmAccount.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -160,6 +190,12 @@
     <Compile Include="GUI\PERS\frmPermission.Designer.cs">
       <DependentUpon>frmPermission.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\PERS\frmPermission_List.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\PERS\frmPermission_List.Designer.cs">
+      <DependentUpon>frmPermission_List.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\PERS\frmPersonnel.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -172,18 +208,17 @@
     <Compile Include="GUI\PERS\frmPersonnel_List.Designer.cs">
       <DependentUpon>frmPersonnel_List.cs</DependentUpon>
     </Compile>
+    <Compile Include="Model\Loai.cs" />
     <Compile Include="Module\clsCallForm.cs" />
     <Compile Include="Module\clsDictionary.cs" />
     <Compile Include="Module\clsEntity.cs" />
     <Compile Include="Module\clsFormatControl.cs" />
     <Compile Include="Module\clsGeneral.cs" />
+    <Compile Include="Module\clsService.cs" />
     <Compile Include="MultiLanguage\EN.Designer.cs" />
     <Compile Include="MultiLanguage\VN.Designer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="GUI\Common\frmAgency.resx">
-      <DependentUpon>frmAgency.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="GUI\Common\frmBase.resx">
       <DependentUpon>frmBase.cs</DependentUpon>
     </EmbeddedResource>
@@ -218,6 +253,12 @@
     <EmbeddedResource Include="GUI\Common\frmWaiting.resx">
       <DependentUpon>frmWaiting.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="GUI\DanhMuc\frmKhachHang_List.resx">
+      <DependentUpon>frmKhachHang_List.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\DanhMuc\frmTinhThanh_List.resx">
+      <DependentUpon>frmTinhThanh_List.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GUI\PERS\frmAccount.resx">
       <DependentUpon>frmAccount.cs</DependentUpon>
     </EmbeddedResource>
@@ -226,6 +267,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\PERS\frmPermission.resx">
       <DependentUpon>frmPermission.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\PERS\frmPermission_List.resx">
+      <DependentUpon>frmPermission_List.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\PERS\frmPersonnel.resx">
       <DependentUpon>frmPersonnel.cs</DependentUpon>
@@ -266,9 +310,7 @@
       <Name>EntityModel</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Icon\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="Resources\3DClusteredColumn_16x16.png" />
   </ItemGroup>
@@ -5422,6 +5464,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Error.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Icon\market-store-icon.ico" />
+    <Content Include="market-store-icon.ico" />
+    <None Include="Resources\default-logo.png" />
+    <None Include="Resources\demoLogo.jpeg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
