--- a/Source/QuanLyBanHang/QuanLyBanHang/App.config
+++ b/Source/QuanLyBanHang/QuanLyBanHang/App.config
@@ -19,22 +19,7 @@
   </entityFramework>
 <userSettings>
         <QuanLyBanHang.Properties.Settings>
-                <setting name="ServicePack" serializeAs="String">
-                        <value>1.0.0</value>
-                </setting>
-                <setting name="ftp" serializeAs="String">
-                        <value>EQQvlTQwQkmQmLh0Zgzt1A==</value>
-                </setting>
-                <setting name="ftp_user" serializeAs="String">
-                        <value>CGddsU5xIa0RoIkYB3MNfg==</value>
-                </setting>
-                <setting name="ftp_pw" serializeAs="String">
-                        <value>IZnn7qexBA9XbCEvktrw8g==</value>
-                </setting>
-                <setting name="ftp_proj" serializeAs="String">
-                        <value>ZOiYtt4REcpJy0gh1e7GfA==</value>
-                </setting>
-                <setting name="isSaveUserAndPassword" serializeAs="String">
+                <setting name="IsRecommend" serializeAs="String">
                         <value>False</value>
                 </setting>
                 <setting name="CurrentUsername" serializeAs="String">
@@ -46,10 +31,10 @@
                 <setting name="ServerName" serializeAs="String">
                         <value />
                 </setting>
-                <setting name="DBName" serializeAs="String">
+                <setting name="DatabaseName" serializeAs="String">
                         <value />
                 </setting>
-                <setting name="WinAu" serializeAs="String">
+                <setting name="IsWindowAuthentication" serializeAs="String">
                         <value>True</value>
                 </setting>
                 <setting name="UserName" serializeAs="String">
@@ -67,11 +52,11 @@
                 <setting name="DateFormat" serializeAs="String">
                         <value>dd/MM/yyyy</value>
                 </setting>
-                <setting name="DecimalFormat" serializeAs="String">
+                <setting name="NumberFormat" serializeAs="String">
                         <value>N0</value>
                 </setting>
                 <setting name="SkinName" serializeAs="String">
-                        <value />
+                        <value>Office 2010 Silver</value>
                 </setting>
                 <setting name="PrinterName" serializeAs="String">
                         <value />
@@ -81,6 +66,9 @@
                 </setting>
                 <setting name="IDAgency" serializeAs="String">
                         <value>0</value>
+                </setting>
+                <setting name="FontFormat" serializeAs="String">
+                        <value>Tahoma, 9pt</value>
                 </setting>
         </QuanLyBanHang.Properties.Settings>
     </userSettings>
