--- a/Source/QuanLyBanHang/QuanLyBanHang/App.config
+++ b/Source/QuanLyBanHang/QuanLyBanHang/App.config
@@ -70,6 +70,12 @@
                 <setting name="FontFormat" serializeAs="String">
                         <value>Tahoma, 9pt</value>
                 </setting>
+                <setting name="BeginDate" serializeAs="String">
+                        <value>2017-01-01</value>
+                </setting>
+                <setting name="EndDate" serializeAs="String">
+                        <value>2017-12-31</value>
+                </setting>
         </QuanLyBanHang.Properties.Settings>
     </userSettings>
 </configuration>
